fix(Styles): aligning input, button, and modal styles with new Hub designs.

--- a/director/assets/sass/overrides/bulma/_button.sass
+++ b/director/assets/sass/overrides/bulma/_button.sass
@@ -6,5 +6,7 @@ $button-border-width: 1px
 $button-padding-horizontal: 1em
     
 .button
+    border-radius: $radius-small
+    border-width: $button-border-width
     height: 2.75em
     padding: $button-padding-vertical $button-padding-horizontal
