--- a/director/assets/sass/styles.sass
+++ b/director/assets/sass/styles.sass
@@ -76,6 +76,9 @@ body, html
   padding-bottom: 2px
   border-bottom: 2px solid #dbdbdb
 
+.input
+  border-radius: 0
+
 .select
   select
     &.is-borderless-select, &.is-borderless-select:active
